unpackaged/main/default/objects/PagesApi__Field_Group__c/PagesApi__Field_Group__c.object-meta.xml
<CustomObject>
    <description>Field Groups store data about the behavior of a set of fields published on a web form.</description>
    <label>Field Group</label>
    <nameField>
        <label>Field Group Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Field Groups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>