unpackaged/main/default/objects/PagesApi__Field_Group__c/fields/PagesApi__Allow_Users_to_Delete_Mapped_Records__c.field-meta.xml
<CustomField>
    <fullName>PagesApi__Allow_Users_to_Delete_Mapped_Records__c</fullName>
    <defaultValue>false</defaultValue>
    <description>** WARNING ** when checked, users will be able to delete records mapped to the field group even if they were not created by the form submitter.</description>
    <inlineHelpText>** WARNING ** when checked, users will be able to delete records mapped to the field group even if they were not created by the form submitter.</inlineHelpText>
    <label>Allow Users to Delete Mapped Records</label>
    <type>Checkbox</type>
</CustomField>