unpackaged/main/default/objects/PagesApi__Field_Group__c/fields/PagesApi__DML_Operation__c.field-meta.xml
<CustomField>
    <fullName>PagesApi__DML_Operation__c</fullName>
    <description>The value specified in this field either creates new records (&quot;Insert&quot;) or updates existing records (&quot;Upsert&quot;).</description>
    <inlineHelpText>The value specified in this field either creates new records (&quot;Insert&quot;) or updates existing records (&quot;Upsert&quot;).</inlineHelpText>
    <label>Database Operation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Insert</fullName>
            </value>
            <value>
                <fullName>Upsert</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>