unpackaged/main/default/objects/PagesApi__Field_Group__c/fields/PagesApi__Form__c.field-meta.xml
<CustomField>
    <fullName>PagesApi__Form__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>**Required** Identifies the field group&#39;s related form.</description>
    <inlineHelpText>**Required** Identifies the field group&#39;s related form.</inlineHelpText>
    <label>Form</label>
    <referenceTo>PagesApi__Form__c</referenceTo>
    <relationshipLabel>Field Groups</relationshipLabel>
    <relationshipName>Field_Groups</relationshipName>
    <type>Lookup</type>
</CustomField>