unpackaged/main/default/objects/PagesApi__Field_Group__c/fields/PagesApi__Instructions__c.field-meta.xml
<CustomField>
    <fullName>PagesApi__Instructions__c</fullName>
    <description>The content entered in this field is displayed to end users to assist in entering data into the fields contained in the field group.</description>
    <inlineHelpText>The content entered in this field is displayed to end users to assist in entering data into the fields contained in the field group.</inlineHelpText>
    <label>Instructions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>