unpackaged/main/default/objects/PagesApi__Field_Group__c/fields/PagesApi__Is_Multiple__c.field-meta.xml
<CustomField>
    <fullName>PagesApi__Is_Multiple__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enables multiple record entries for an object on the form (like a related list).</description>
    <inlineHelpText>Enables multiple record entries for an object on the form (like a related list).</inlineHelpText>
    <label>Allow Multiple Entries</label>
    <type>Checkbox</type>
</CustomField>