unpackaged/main/default/objects/PagesApi__Field_Group__c/fields/PagesApi__Mapped_Object__c.field-meta.xml
<CustomField>
    <fullName>PagesApi__Mapped_Object__c</fullName>
    <description>Specifies the target object to which records are created or updated for this field group.</description>
    <inlineHelpText>Specifies the target object to which records are created or updated for this field group.</inlineHelpText>
    <label>Mapped Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>