unpackaged/main/default/objects/PagesApi__Field_Group__c/fields/PagesApi__Mapped_Relationship_Field__c.field-meta.xml
<CustomField>
    <fullName>PagesApi__Mapped_Relationship_Field__c</fullName>
    <description>When linked to a parent field group, this field stores the api name of the lookup or master-detail field that links the two objects together.</description>
    <inlineHelpText>When linked to a parent field group, this field stores the api name of the lookup or master-detail field that links the two objects together.</inlineHelpText>
    <label>Mapped Relationship Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>