unpackaged/main/default/objects/PagesApi__Field_Group__c/fields/PagesApi__Order__c.field-meta.xml
<CustomField>
    <fullName>PagesApi__Order__c</fullName>
    <description>Identifies the order the Field Group is displayed on the form (Sorted Ascending).</description>
    <inlineHelpText>Identifies the order the Field Group is displayed on the form (Sorted Ascending).</inlineHelpText>
    <label>Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>