unpackaged/main/default/objects/PagesApi__Field_Group__c/fields/PagesApi__Parent_Field_Group__c.field-meta.xml
<CustomField>
    <fullName>PagesApi__Parent_Field_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Specifies the Parent Object for this Field Group&#39;s records.</description>
    <inlineHelpText>Specifies the Parent Object for this Field Group&#39;s records.</inlineHelpText>
    <label>Parent Field Group</label>
    <referenceTo>PagesApi__Field_Group__c</referenceTo>
    <relationshipLabel>Child Field Groups</relationshipLabel>
    <relationshipName>Field_Groups</relationshipName>
    <type>Lookup</type>
</CustomField>