unpackaged/main/default/objects/PagesApi__Field_Group__c/fields/PagesApi__SOQL_Filter__c.field-meta.xml
<CustomField>
    <fullName>PagesApi__SOQL_Filter__c</fullName>
    <description>Defines the filter criteria used to retrieve existing records for this Field Group.</description>
    <inlineHelpText>Defines the filter criteria used to retrieve existing records for this Field Group.</inlineHelpText>
    <label>SOQL Filter</label>
    <length>255</length>
    <type>Text</type>
</CustomField>